# SpectroscoPyx

./: .coveragerc  .gitignore  .rtd-environment.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  readthedocs.yml  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
SpectroscoPy/: __init__.py
SpectroscoPy/atomic/: electronConfiguration.py
SpectroscoPy/atomic/nist/: nistIonizationQuery.py
SpectroscoPy/atomic/nist/tests/: test_nistIonizationQuery.py
SpectroscoPy/atomic/tests/: test_electronConfiguration.py
SpectroscoPy/diagnostics/optics/: dispersive.py
SpectroscoPy/diagnostics/optics/tests/: test_dispersive.py
SpectroscoPyx/: __init__.py
SpectroscoPyx/atomic/: electronConfiguration.py
SpectroscoPyx/diagnostics/filters/: filtersHenke.py
SpectroscoPyx/diagnostics/optics/: __init__.py  dispersive.py
SpectroscoPyx/diagnostics/optics/tests/: test_dispersive.py
cextern/: README.rst
docs/: CNAME  conf.py  index.rst
docs/spectroscopyx/: index.rst
requirements/: base.txt  environment.yml
spectroscopyx/: __init__.py
spectroscopyx/diagnostics/optics/: dispersive.py
spectroscopyx/diagnostics/optics/tests/: __init__.py  test_dispersive.py
spectroscopyx/example_subpkg/: setup_package.py
spectroscopyx/examples/: README.txt
spectroscopyx/tests/: test_example.py
