[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
addopts = --doctest-modules
norecursedirs = "astropy_helpers" "docs" "build" "docs/_build"

[ah_bootstrap]
auto_use = True

[metadata]
package_name = SpectroscoPyx
description = packagename
long_description = "SpectroscoPyx is a community-developed and community-driven core Python package for spectroscopic physics."
author = SpectroscoPyx Developers
author_email = "pawel@pmkozlowski.com" # until we get an email address
license = BSD 3-Clause
url = localhost # need url
edit_on_github = False
github_project = PlasmaPy/SpectroscoPyx
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev1

[entry_points]

astropy-package-template-example = packagename.example_mod:main

