[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = spectroscopyx
description = spectroscopyx
long_description = "SpectroscoPyx is a community-developed and community-driven core Python package for spectroscopic physics."
author = SpectroscoPyx Developers
author_email = "pawel@pmkozlowski.com" # until we get an email address
license = BSD 3-Clause
url = https://spectroscopyx.org
edit_on_github = True
github_project = PlasmaPy/SpectroscoPyx
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev2
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

astropy-package-template-example = packagename.example_mod:main

